k8s/01_database-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  labels:
    app.kubernetes.io/component: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: database
      app.kubernetes.io/component: database
  template:
    metadata:
      labels:
        app.kubernetes.io/name: database
        app.kubernetes.io/component: database
    spec:
      containers:
        - name: main
          image: postgres:16
          ports:
            - name: db
              containerPort: 5432
              protocol: TCP
          
          volumeMounts:
            - mountPath: /run/secrets
              name: secrets-dir

            - mountPath: /var/lib/postgresql/data
              name: db-pvc


      volumes:
        - name: secrets-dir
          emptyDir:
            sizeLimit: 10Mi
          
  
  volumeClaimTemplates:
    - metadata:
        name: db-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: "local-path"
        resources:
          requests:
            storage: 10Gi
