k8s/03_rabbit-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq
      app.kubernetes.io/component: message-broker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rabbitmq
        app.kubernetes.io/component: message-broker
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:4
          ports:
            - name: amqp
              containerPort: 5672
              protocol: TCP

          readinessProbe:
            tcpSocket:
              port: 5672
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          
          livenessProbe:
            tcpSocket:
              port: 5672
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
