k8s/07_users-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-microservices
  labels:
    app.kubernetes.io/name: users
    app.kubernetes.io/component: users-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: users-pod
      app.kubernetes.io/component: users-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: users-pod
        app.kubernetes.io/component: users-api
    spec:
      containers:
        - name: users-msvc
          image: hikashi/msvc-users:issue89.v1
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            failureThreshold: 3
            periodSeconds: 10
          
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"

            limits:
              memory: "512Mi"
              cpu: "500m"
