k8s/09_notification-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-microservices
  labels:
    app.kubernetes.io/name: notification
    app.kubernetes.io/component: notification-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: notification-pod
      app.kubernetes.io/component: notification-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: notification-pod
        app.kubernetes.io/component: notification-api
    spec:
      containers:
        - name: msvc
          image: hikashi/msvc-notification:72c37df
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3

          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
