k8s/12_gateway-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api-gateway
      app.kubernetes.io/component: api-gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api-gateway
        app.kubernetes.io/component: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: hikashi/msvc-gateway:alpha.v1
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          
          volumeMounts:
            - mountPath: /app/appsettings.Production.json
              subPath: appsettings.Production.json
              name: app-settings
      
      volumes:
        - name: app-settings
          configMap:
            name: gateway-config
            items:
              - key: appsettings.Production.json
                path: appsettings.Production.json
