k8s/13_gateway-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/component: api-gateway
spec:
  selector:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/component: api-gateway

  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
